# nellie

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  environment.yml  genindex.html  main.py  mkdocs.yml  nellie.feature_extraction.html  nellie.segmentation.html  objects.inv  pyproject.toml  reproduce_issue.py  requirements_mac.txt  requirements_windows.txt  setup.cfg  setup.py  sitemap.xml  verify_version.py
.github/workflows/: docs.yml
_modules/: index.html  main.html
_modules/nellie/: run.html
_modules/nellie_napari/: nellie_analysis.html  nellie_fileselect.html  nellie_home.html
_sources/: modules.rst.txt  nellie.tracking.rst.txt
api/: index.html
api/feature_extraction/: index.html
api/im_info/: index.html
api/nellie_napari/: index.html
api/run/: index.html
api/segmentation/: index.html
api/tracking/: index.html
api/utils/: index.html
data/: test_5d.tif
docs/: api.md  conf.py  index.md  index.rst  nellie.feature_extraction.rst  nellie.im_info.rst  nellie.rst  nellie.segmentation.rst  nellie_napari.rst  tests.unit.rst
docs/api/: feature_extraction.md  im_info.md  index.md  nellie_napari.md  run.md  segmentation.md  tracking.md  utils.md
nellie/: __init__.py  cli.py  run copy.py  run.py  val_run.py
nellie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nellie/feature_extraction/: __init__.py  hierarchical.py  hierarchical_2.py
nellie/im_info/: __init__.py  im_info.py  im_info_2.py  verifier.py
nellie/segmentation/: __init__.py  filtering.py  labelling.py  mocap_marking.py  networking.py
nellie/tracking/: __init__.py  all_tracks_for_label.py  flow_interpolation.py  flow_vector_viz.py  hu_tracking.py  voxel_reassignment.py
nellie/utils/: __init__.py  adaptive_run.py  base_logger.py  general.py  gpu_functions.py
nellie_napari/: __init__.py  batch_mode.py  discover_plugins.py  home.py  napari.yaml  nellie_analysis.py  nellie_fileselect.py  nellie_fileselect_2.py  nellie_home.py  nellie_loader.py  nellie_processor.py  nellie_processor_2.py  nellie_settings.py  nellie_viewer.py  nellie_visualizer.py  settings.py  visualizer.py
scripts/: cpp114.py  cpp114_sg.py  cpp115.py  cpp115_sg.py  cpp120.py  cpp120_sg.py  voxel_reassignment_demo.py
search/: search_index.json
src/: __init__.py  main.py  run.py
src/analysis/: 20230412_analysis.py  20230418_tip_exploration.py  20230426_analyze_all_channels_intensity.py  20230428_lipid_droplets_mito.py  20230504_TMRE_SSAT.py  clustering.py  color_by_cluster.py  scratch_multi_file.py  scratch_multimesh_GNN.py  scratch_multiorganelle_decon.py  walking.py
src/case_studies/: multiorganelle_deconvolution.py  scratch_interpolation.py
src/feature_extraction/: flow_skeleton.py  graph_frame.py  hierarchical.py  morphology_labels.py  morphology_skeletons.py  motility_labels.py
src/im_info/: im_info.py
src/io/: __init__.py  im_info.py  pickle_jar.py
src/pipeline/: __init__.py  analysis.py  branch_labeling.py  branching.py  frangi_filter.py  frangi_filtration.py  networking.py  node_props.py  node_tracking.py  organelle_props.py  segmentation.py  skeletonization.py
src/scripts/: breakup.py  color_nodes_by_cluster.py  color_regions_by_cluster.py  colorbytsne.py  concatenate_timelapses.py  morphology_first_frame.py  morphology_first_frame_plot.py  motility_only.py  mtg_tmre_first_frame.py  preprocess_region_data.py  test.py
src/segmentation/: filtering.py  labelling.py  mocap_marking.py  networking.py
src/tracking/: all_tracks_for_label.py  flow_interpolation.py  hu_tracking.py  voxel_movement.py  voxel_reassignment.py
src/utils/: base_logger.py  general.py  gpu_functions.py  torch_xp.py  visualize.py
src/visualization/: plugin_test.py  test2.py
src_2/: run.py
src_2/analysis/: clustering.py  dimensionality_reduction.py  hetero_graph_autenc.py  scratch_hgmae.py  scratch_multi_file.py  scratch_multimesh_GNN.py  scratch_multiorganelle_decon.py
tests/: test_hierarchical_aggregation.py  test_hu_tracking.py  test_iminfo_allocate_memory.py  test_labelling.py  test_mocap_marking.py  test_verifier_metadata.py
(+117 files in other folders)
