[metadata]
name = nellie
version = 0.1.2
description = Automated organelle segmentation, tracking, and hierarchical feature extraction in 2D/3D live-cell microscopy
long_description = file: README.md
long_description_content_type = text/markdown
author = Austin E. Y. T. Lefebvre
author_email = austin.e.lefebvre+nellie@gmail.com
url = https://github.com/aelefebv/nellie
classifiers =
    Framework :: napari

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.26.4
    scipy==1.12.0
    scikit-image==0.22.0
    nd2==0.9.0
    ome-types==0.5.0
    pandas==2.2.1
    matplotlib==3.8.3
    napari[all]
include_package_data = True

[options.package_data]
nellie_napari = napari.yaml, logo.png

[options.entry_points]
napari.manifest =
    nellie = nellie_napari:napari.yaml
